Fixed position of Header and alignment of elements in ProductCard on PLP

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,12 +1,12 @@
 .header {
   position: fixed;
-  left: 0;
   top: 0;
   z-index: 20;
   height: 5em;
   width: 100%;
+  max-width: 1440px;
+  padding: 0 100px;
   display: flex;
-  padding: 0 6.25em;
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
