--- a/src/components/PLP/ProductCard.module.css
+++ b/src/components/PLP/ProductCard.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: center;
+  align-items: center;  
   padding: 16px;
   margin: 0;
   width: 386px;
@@ -14,8 +14,7 @@
   background: #ffffff;
 }
 
-.card:hover,
-.card:focus {
+.card:hover {
   box-shadow: 0 4px 35px rgba(168, 172, 176, 0.19);
   cursor: pointer;
 }
@@ -59,6 +58,10 @@
 .spacer {
   width: 24px;
   height: 24px;
+}
+
+.text {
+  width: 354px;
 }
 
 .title {
